percentage counter still not working good